--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Passion One", sans-serif;
+    --fonte3: "Sriracha", cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -9,6 +19,11 @@ html, body {
 
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
+}
+h1 {
+     font-family: var(--fonte2);
+     font-size: 40px;
 }
 header {
     background-color: black;
@@ -19,6 +34,8 @@ header {
 hearder > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    
 }
 
 header > p {
@@ -40,6 +57,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 15px;
 }
 
 section.normal {
@@ -51,7 +70,8 @@ section.normal {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 
