--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -23,7 +23,8 @@ html, body {
 }
 h1 {
      font-family: var(--fonte2);
-     font-size: 40px;
+     font-size: 5vw;
+     padding-top: 10px;
 }
 header {
     background-color: black;
@@ -39,7 +40,7 @@ hearder > h1 {
 }
 
 header > p {
-
+    
     padding-bottom: 50px;
 }
 
@@ -58,9 +59,12 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 15px;
+    font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
 section.normal {
     background-color: white;
     color: black;
@@ -69,18 +73,33 @@ section.normal {
 
 }
 
+section.imagem {
+    background-color: rgb(51, 51, 51);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-attachment: fixed;
+
+}
+
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+    
 }
 
-section.imagem {
-        background-color: rgb(51, 51, 51);
-        color: white
-        
 
 
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-size: cover;
 }
 
 footer {
